date format fixed for today request

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <div class="container">
-  <router-outlet>
-    <app-currency></app-currency>
-  </router-outlet>
+  <router-outlet></router-outlet>
 </div>
