--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-  <router-outlet></router-outlet>
+  <app-currency id="currency"></app-currency>
+  <app-calculation id="calculation"></app-calculation>
 </div>
