calculate function done

--- a/src/app/components/calculation/calculation.component.html
+++ b/src/app/components/calculation/calculation.component.html
@@ -2,8 +2,6 @@
 <tbody>
   <div class="calculator">
     <ul>
-    
-    
       <li class="amount"><b>Miktar</b></li>
       <li class="entry">
         <input
@@ -13,39 +11,28 @@
           autocomplete="off"
         />
       </li>
-
-
       <br />
-
-
-
       <li class="from"><b>From</b></li>
       <li class="fromCurrency">
-        <select name="" id="fromCurrency" >
-          <option
-            *ngFor="let item of currencies"
-          >
+        <select name="" id="fromCurrency" [(ngModel)]="fromCurrency">
+          <option *ngFor="let item of currencies" [ngValue]="item.banknoteBuying">
             {{ item.currencyName }}
           </option>
         </select>
       </li>
-
       <li class="to"><b>To</b></li>
       <li class="toCurrency">
-        <select #c2 name="" id="toCurrency" >
-          <option
-            *ngFor="let item of currencies"
-            [value]="item.banknoteBuying"
-          >
+        <select #c2 name="" id="toCurrency" [(ngModel)]="toCurrency">
+          <option *ngFor="let item of currencies" [ngValue]="item.banknoteBuying">
             {{ item.currencyName }}
           </option>
         </select>
       </li>
-
-
-      
+      <li>
+        <button type="button" (click)="calculate()">Hesapla</button>
+      </li>
       <li class="result"><b>Sonuç</b></li>
-      <li><p name="result" id="result" type="text"></p></li>
+      <li><p name="result" id="result" type="text">{{result}}</p></li>
     </ul>
   </div>
 </tbody>
