--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <app-currency id="currency"></app-currency>
-  <app-calculation id="calculation"></app-calculation>
+  <div class="currency">
+    <app-currency id="currency"></app-currency>
+  </div>
+  <div class="calculation">
+    <app-calculation id="calculation"></app-calculation>
+  </div>
 </div>
