--- a/src/app/components/currency/currency.component.html
+++ b/src/app/components/currency/currency.component.html
@@ -3,6 +3,7 @@
   <form [formGroup]="dateFormGroup">
     <input type="date" id="currentDate" formControlName="currentDate">
     <button (click)="setCurrentDate()">Tarihe Git</button>
+    &nbsp;
     <button (click)="reload()">Bugün</button>
   </form>
 </div>
