--- a/src/app/components/currency/currency.component.html
+++ b/src/app/components/currency/currency.component.html
@@ -13,6 +13,7 @@
     <thead>
       <tr>
         <th scope="col">Id</th>
+        <th scope="col">Currency Code</th>
         <th scope="col">Currency Name</th>
         <th scope="col">Forex Buying</th>
         <th scope="col">Forex Selling</th>
@@ -25,6 +26,7 @@
     <tbody>
       <tr *ngFor="let item of currencies">
         <td>{{ item.id }}</td>
+        <td><img [src]="item.currencyImage ? item.currencyImage : ''">{{ item.currencyCode ? item.currencyCode : '-'}}</td>
         <td>{{ item.currencyName ? item.currencyName : '-'}}</td>
         <td>{{ item.forexBuying ? item.forexBuying : '-'}}</td>
         <td>{{ item.forexSelling ? item.forexSelling : '-'}}</td>
