some language adjustments have been made

--- a/src/app/components/calculation/calculation.component.html
+++ b/src/app/components/calculation/calculation.component.html
@@ -12,7 +12,7 @@
         />
       </li>
       <br />
-      <li class="from"><b>From</b></li>
+      <li class="from"><b>Biriminden</b></li>
       <li class="fromCurrency">
         <select name="" id="fromCurrency" [(ngModel)]="fromCurrency">
           <option *ngFor="let item of currencies" [ngValue]="item.forexBuying">
@@ -20,7 +20,7 @@
           </option>
         </select>
       </li>
-      <li class="to"><b>To</b></li>
+      <li class="to"><b>Birimine</b></li>
       <li class="toCurrency">
         <select #c2 name="" id="toCurrency" [(ngModel)]="toCurrency">
           <option *ngFor="let item of currencies" [ngValue]="item.forexBuying">
