--- a/src/app/components/currency/currency.component.html
+++ b/src/app/components/currency/currency.component.html
@@ -13,14 +13,14 @@
     <thead>
       <tr>
         <th scope="col">Id</th>
-        <th scope="col">Currency Code</th>
-        <th scope="col">Currency Name</th>
-        <th scope="col">Forex Buying</th>
-        <th scope="col">Forex Selling</th>
-        <th scope="col">Banknote Buying</th>
-        <th scope="col">Banknote Selling</th>
-        <th scope="col">Cross Rate USD</th>
-        <th scope="col">Currency Date</th>
+        <th scope="col">Birim Kodu</th>
+        <th scope="col">Birim Adı</th>
+        <th scope="col">Döviz Alış</th>
+        <th scope="col">Döviz Satış</th>
+        <th scope="col">Efektif Alış</th>
+        <th scope="col">Efektif Satış</th>
+        <th scope="col">Çapraz kurlar/USD</th>
+        <th scope="col">Tarih</th>
       </tr>
     </thead>
     <tbody>
